<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/gradient_background">

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/Display"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Título del contenedor de la oración -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/Learning"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Contenedor de la oración traducida -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginBottom="15dp">

        <!-- Learning Language Sentence 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:background="@drawable/rounded_border"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/learningLanguageText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/learningAudioButton1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_audio_foreground"
                android:contentDescription="Play Learning Audio"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <!-- Learning Language Sentence 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:background="@drawable/rounded_border"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/learningLanguageText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/learningAudioButton2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_audio_foreground"
                android:contentDescription="Play Learning Audio"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <!-- Learning Language Sentence 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:background="@drawable/rounded_border"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/learningLanguageText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/learningAudioButton3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_audio_foreground"
                android:contentDescription="Play Learning Audio"
                android:layout_marginStart="15dp" />
        </LinearLayout>

    </LinearLayout>

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>
</LinearLayout>
